--- a/index.html
+++ b/index.html
@@ -11,24 +11,27 @@
     <header class="h-debug">
         <div class="h-container1 h-container1-debug">
             <div class="logo-container">
-                <span class="logo">Logo</span>
+                <img src="./img/logo.svg" class="logo" alt="Logo">
             </div>
             <div class="link-container">
                 <div class="link">
-                    <a href="">Link</a>
+                    <a href="">Scarica</a>
                 </div>
                 <div class="link">
-                    <a href="">Link</a>
+                    <a href="">Perché Discord</a>
                 </div>
                 <div class="link">
-                    <a href="">Link</a>
+                    <a href="">Nitro</a>
                 </div>
                 <div class="link">
-                    <a href="">Link</a>
+                    <a href="">Sicurezza</a>
+                </div>
+                <div class="link">
+                    <a href="">Assistenza</a>
                 </div>
             </div>
             <div class="login-container">
-                <div class="login">Login</div>
+                <button class="login">Accedi</button>
             </div>
         </div>
     </header>
