--- a/index.html
+++ b/index.html
@@ -40,7 +40,16 @@
     <main>
         <!-- Section 1 -->
         <section class="main-1 main-1-debug">
-            <div class="main-1-1 main-1-1-debug"></div>
+            <div class="main-1-1 main-1-1-debug">
+                <h1 id="title">Il tuo posto per parlare</h1>
+                <p id="title-text">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
+                <button id="button-1">&#8595 Scarica per Mac</button>
+                <button id="button-2">Apri Discord nel tuo browser</button>
+            </div>
+            <!-- <div class="button">
+                    <button id="button-1">&#8595 Scarica per Mac</button>
+                    <button id="button-2">Apri Discord nel tuo browser</button> 
+                </div> -->
         </section>
 
         <!-- Section 2 -->
