add: section 2 - invitation

--- a/index.html
+++ b/index.html
@@ -54,8 +54,12 @@
 
         <!-- Section 2 -->
         <section class="main-2 main-2-debug">
-            <div class="main-2-1 main-2-1-debug"></div>
-            <div class="main-2-2 main-2-2-debug"></div>
+            <!-- <div class="main-2-1 main-2-1-debug"></div> -->
+            <img class="main-2-1 main-2-1-debug" src="./img/item1.svg"></img>
+            <div class="main-2-2 main-2-2-debug">
+                <h2 id="invito">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                <p id="invito-text">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+            </div>
         </section>
 
         <!-- Section 3 -->
