--- a/index.html
+++ b/index.html
@@ -57,15 +57,18 @@
             <!-- <div class="main-2-1 main-2-1-debug"></div> -->
             <img class="main-2-1 main-2-1-debug" src="./img/item1.svg"></img>
             <div class="main-2-2 main-2-2-debug">
-                <h2 id="invito">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
-                <p id="invito-text">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
+                <h2 class="section-title">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
+                <p class="section-text">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
             </div>
         </section>
 
         <!-- Section 3 -->
         <section class="main-3 main-3-debug">
-            <div class="main-3-1 main-3-1-debug"></div>
-            <div class="main-3-2 main-3-2-debug"></div>
+            <div class="main-3-1 main-3-1-debug">
+                <h2 class="section-title-3">Dove trovarsi è facile</h2>
+                <p class="section-text-3">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
+            </div>
+            <img class="main-3-2 main-3-2-debug" src="./img/item2.svg"></img>
         </section>
 
         <!-- Section 4 -->
