add: section 4 - fandome

--- a/index.html
+++ b/index.html
@@ -73,8 +73,11 @@
 
         <!-- Section 4 -->
         <section class="main-4 main-4-debug">
-            <div class="main-4-1 main-4-1-debug"></div>
-            <div class="main-4-2 main-4-2-debug"></div>
+            <img class="main-4-1 main-4-1-debug" src="./img/item3.svg"></img>
+            <div class="main-4-2 main-4-2-debug">
+                <h2 class="section-title" id="fandome">Da pochi a un fandome</h2>
+                <p class="section-text">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
+            </div>
         </section>
         
         <!-- Section 5 -->
