--- a/index.html
+++ b/index.html
@@ -82,7 +82,13 @@
         
         <!-- Section 5 -->
         <section class="main-5 main-5-debug">
-            <div class="main-5-1 main-5-1-debug"></div>
+            <div class="main-5-1 main-5-1-debug">
+                <h2 id="technology">Tecnologia affidabile per tenersi in contatto</h2>
+                <p id="technology-text">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
+                <img src="./img/item4-big.svg" alt="">
+                <h3 id="ready">Pronto a iniziare la tua avventura?</h3>
+                <button id="download">&#8595 Scarica per Mac</button>
+            </div>
         </section>
     </main>
 
