--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
             <div class="main-1-1 main-1-1-debug">
                 <h1 id="title">Il tuo posto per parlare</h1>
                 <p id="title-text">Che tu faccia parte di un club scolastico, gruppo di gamer, comunità artistica mondiale, o semplicemente di un piccolo gruppo di amici che vuole passare il tempo assieme, Discord rende più facile chiacchierare ogni giorno e ritrovarsi più spesso.</p>
-                <button id="button-1">&#8595 Scarica per Mac</button>
+                <button id="button-1">&#11107 Scarica per Mac</button>
                 <button id="button-2">Apri Discord nel tuo browser</button>
             </div>
             <!-- <div class="button">
@@ -87,7 +87,7 @@
                 <p id="technology-text">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 <img src="./img/item4-big.svg" alt="">
                 <h3 id="ready">Pronto a iniziare la tua avventura?</h3>
-                <button id="download">&#8595 Scarica per Mac</button>
+                <button id="download">&#11107 Scarica per Mac</button>
             </div>
         </section>
     </main>
@@ -97,20 +97,59 @@
 
         <!-- Prima Parte Footer -->
         <div class="footer-container-1 footer-container-1-debug">
-            <div class="footer-1-1 footer-1-1-debug"></div>
-            <div class="footer-1-2 footer-1-2-debug"></div>
-            <div class="footer-1-3 footer-1-3-debug"></div>
-            <div class="footer-1-4 footer-1-4-debug"></div>
-            <div class="footer-1-5 footer-1-5-debug"></div>
+            <div class="footer-1-1 footer-1-1-debug">
+                <h3 id="your-place">Il tuo posto per parlare</h3>
+                <img src="./img/ita.png" alt="bandiera italia" id="ita">
+                <span id="ita-text">Italiano &#x25BC</span>
+            </div>
+            <div class="footer-1-2 footer-1-2-debug">
+                <h3 id="product">Prodotto</h3>
+                <a href="">Scarica</a>
+                <a href="">Perché Discord</a>
+                <a href="">Nitro</a>
+                <a href="">Sicurezza</a>
+                <a href="">Assistenza</a>
+            </div>
+            <div class="footer-1-3 footer-1-3-debug">
+                <h3 id="product">Compagnia</h3>
+                <a href="">Chi siamo</a>
+                <a href="">Lavora con noi</a>
+                <a href="">Marchio</a>
+                <a href="">Redazione</a>
+                <a href="">Negozio</a>
+            </div>
+            <div class="footer-1-4 footer-1-4-debug">
+                <h3 id="product">Risorse</h3>
+                <a href="">Scarica</a>
+                <a href="">Perché Discord</a>
+                <a href="">Nitro</a>
+                <a href="">Sicurezza</a>
+                <a href="">Assistenza</a>
+                <a href="">Scarica</a>
+                <a href="">Perché Discord</a>
+                <a href="">Nitro</a>
+                <a href="">Sicurezza</a>
+                <a href="">Assistenza</a>
+                <a href="">Assistenza</a>
+            </div>
+            <div class="footer-1-5 footer-1-5-debug">
+                <h3 id="product">Prodotto</h3>
+                <a href="">Scarica</a>
+                <a href="">Perché Discord</a>
+                <a href="">Nitro</a>
+                <a href="">Sicurezza</a>
+                <a href="">Assistenza</a>
+            </div>
         </div>
+        <hr>
 
         <!-- Seconda Parte Footer -->
-        <div class="footer-container-2">
+        <div class="footer-container-2 footer-container-2-debug">
             <div class="footer-logo-container footer-logo-container-debug">
-                <span class="footer-logo">Logo</span>
+                <img class="footer-logo" src="./img/logo.svg"></img>
             </div>
             <div class="footer-bottone-container footer-bottone-container-debug">
-                <span class="footer-bottone">Bottone</span>
+                <button class="footer-bottone">Registrati</button>
             </div>
         </div>
         
