--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Discord</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body>
+<body id="debug">
     <!-- Header -->
-    <header class="h-debug">
-        <div class="h-container1 h-container1-debug">
+    <header>
+        <div class="h-container">
             <div class="logo-container">
                 <img src="./img/logo.svg" class="logo" alt="Logo">
             </div>
@@ -53,36 +53,36 @@
         </section>
 
         <!-- Section 2 -->
-        <section class="main-2 main-2-debug">
+        <section class="main-2">
             <!-- <div class="main-2-1 main-2-1-debug"></div> -->
-            <img class="main-2-1 main-2-1-debug" src="./img/item1.svg"></img>
-            <div class="main-2-2 main-2-2-debug">
+            <img class="main-2-1" src="./img/item1.svg"></img>
+            <div class="main-2-2">
                 <h2 class="section-title">Un luogo a invito con tutto lo spazio necessario per parlare</h2>
                 <p class="section-text">I server Discord sono organizzati in canali tematici in cui puoi collaborare, condividere o semplicemente parlare della tua giornata senza intasare una chat di gruppo.</p>
             </div>
         </section>
 
         <!-- Section 3 -->
-        <section class="main-3 main-3-debug">
-            <div class="main-3-1 main-3-1-debug">
+        <section class="main-3">
+            <div class="main-3-1">
                 <h2 class="section-title-3">Dove trovarsi è facile</h2>
                 <p class="section-text-3">Mettiti comodo in un canale vocale quando hai tempo. Gli amici nel tuo server possono vedere che sei lì e unirsi istantaneamente senza dover chiamare.</p>
             </div>
-            <img class="main-3-2 main-3-2-debug" src="./img/item2.svg"></img>
+            <img class="main-3-2" src="./img/item2.svg"></img>
         </section>
 
         <!-- Section 4 -->
-        <section class="main-4 main-4-debug">
-            <img class="main-4-1 main-4-1-debug" src="./img/item3.svg"></img>
-            <div class="main-4-2 main-4-2-debug">
+        <section class="main-4">
+            <img class="main-4-1" src="./img/item3.svg"></img>
+            <div class="main-4-2">
                 <h2 class="section-title" id="fandome">Da pochi a un fandome</h2>
                 <p class="section-text">Dai inizio a una community di qualsiasi dimensione con strumenti di moderazione e accesso ai membri personalizzabile. Concedi ai membri poteri speciali, crea canali privati, e molto altro.</p>
             </div>
         </section>
         
         <!-- Section 5 -->
-        <section class="main-5 main-5-debug">
-            <div class="main-5-1 main-5-1-debug">
+        <section class="main-5">
+            <div class="main-5-1">
                 <h2 id="technology">Tecnologia affidabile per tenersi in contatto</h2>
                 <p id="technology-text">Video e audio a bassa latenza ti faranno sentire come se foste tutti nella stessa stanza. Fai ciao in video, guarda gli amici giocare in streaming, o riunitevi in una sessione di disegno con la condivisione schermo.</p>
                 <img src="./img/item4-big.svg" alt="">
@@ -93,16 +93,16 @@
     </main>
 
     <!-- Footer -->
-    <footer class="f-debug">
+    <footer>
 
         <!-- Prima Parte Footer -->
-        <div class="footer-container-1 footer-container-1-debug">
-            <div class="footer-1-1 footer-1-1-debug">
+        <div class="footer-container-1">
+            <div class="footer-1-1">
                 <h3 id="your-place">Il tuo posto per parlare</h3>
                 <img src="./img/ita.png" alt="bandiera italia" id="ita">
                 <span id="ita-text">Italiano &#x25BC</span>
             </div>
-            <div class="footer-1-2 footer-1-2-debug">
+            <div class="footer-1-2">
                 <h3 id="product">Prodotto</h3>
                 <a href="">Scarica</a>
                 <a href="">Perché Discord</a>
@@ -110,7 +110,7 @@
                 <a href="">Sicurezza</a>
                 <a href="">Assistenza</a>
             </div>
-            <div class="footer-1-3 footer-1-3-debug">
+            <div class="footer-1-3">
                 <h3 id="product">Compagnia</h3>
                 <a href="">Chi siamo</a>
                 <a href="">Lavora con noi</a>
@@ -118,7 +118,7 @@
                 <a href="">Redazione</a>
                 <a href="">Negozio</a>
             </div>
-            <div class="footer-1-4 footer-1-4-debug">
+            <div class="footer-1-4">
                 <h3 id="product">Risorse</h3>
                 <a href="">Scarica</a>
                 <a href="">Perché Discord</a>
@@ -132,7 +132,7 @@
                 <a href="">Assistenza</a>
                 <a href="">Assistenza</a>
             </div>
-            <div class="footer-1-5 footer-1-5-debug">
+            <div class="footer-1-5">
                 <h3 id="product">Prodotto</h3>
                 <a href="">Scarica</a>
                 <a href="">Perché Discord</a>
@@ -144,11 +144,11 @@
         <hr>
 
         <!-- Seconda Parte Footer -->
-        <div class="footer-container-2 footer-container-2-debug">
-            <div class="footer-logo-container footer-logo-container-debug">
+        <div class="footer-container-2">
+            <div class="footer-logo-container">
                 <img class="footer-logo" src="./img/logo.svg"></img>
             </div>
-            <div class="footer-bottone-container footer-bottone-container-debug">
+            <div class="footer-bottone-container">
                 <button class="footer-bottone">Registrati</button>
             </div>
         </div>
