remove: debug settings

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Discord</title>
     <link rel="stylesheet" href="./style.css">
 </head>
-<body id="debug">
+<body>
     <!-- Header -->
     <header>
         <div class="h-container">
